2008-02-01  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 0.8 release.

2008-01-31  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Skip \r lines as well for Win32.

	* NEWS: Update for 0.8: --file-format, --comment, and SHA-1 fixes.

	* paperkey.c (usage, main), output.c (output_start): Add --comment
	option to include an arbitrary comment in base16 output.

	* paperkey.1: Document --file-format and --comment.

	* README, paperkey.spec.in: Slightly more elegant language.

2008-01-30  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Ignore blank lines in text input.

2007-11-02  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.1: Escape dashes in man page.  From Peter Palfrader.

2007-11-01  David Shaw  <dshaw@jabberwocky.com>

	* output.h, output.c (output_file_format): New function to print
	our file format into the archive.
	
	* paperkey.c (main), output.c (output_start): Use it here.
	Suggested by Brendan Kidwell.

2007-10-03  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: NEWS: Post-release commit.

	* README, configure.ac, NEWS: Preparing 0.7 release.

2007-09-25  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): There is no such thing as an "auto"
	--output-type.

	* parse.c (parse): Just in case, check for a short read on the
	packet.

2007-09-24  David Shaw  <dshaw@jabberwocky.com>

	* AUTHORS, Makefile.am, paperkey.spec.in, paperkey.1: Add man page
	thanks to Peter Palfrader.

	* restore.h, restore.c (restore): Pass in secrets FILE* from
	outside.  Don't do the reopen-as-text trickery since even Win32
	doesn't need it.
	paperkey.c (main): Call it from here.  This allows for secrets to
	come in on stdin.

2007-09-22  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac, NEWS: Release version 0.6.

	* output.h, output.c (do_crc24): Better CRC24 implementation.
	parse.c (read_secrets_file), output.c (output_bytes): Call it
	here.
